<resources>
    <string name="app_name">Calculadora</string>
    <string name="user">Alvaro</string>
    <string name="pass">12345</string>
    <string name="num1">0</string>
    <string name="num2">0</string>
    <string name="strAdd">+</string>
    <string name="strSubstract">-</string>
    <string name="strMultiply">*</string>
    <string name="strDivide">/</string>
    <string name="strClear">Clear</string>
    <string name="strReturn">Return</string>
    <string name="enter">Login</string>
    <string name="exit">Exit</string>

</resources>
